# rtiow

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  canvas.rs  hit.rs  lib.rs  main.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  vec3.rs  vector3.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs
