[package]
name = "rtiow"
version = "0.1.0"
edition = "2021"
authors = ["Michael Kearns <mobiuscog@users.noreply.github.com>"]
description = "An opinionated implementation of the book(s) at https://raytracing.github.io/"
repository = "https://github.com/mobiuscog/rtiow"
readme = "README.md"
license="CC0-1.0"

[dependencies]
auto_ops = "0.3.0"
macroquad = "0.3.25"
num_cpus = "1.13.1"
num-traits = "0.2.15"
rand = "0.8.5"